<resources>
    <string name="app_name">resq</string>
    <string name="press_to_login">Press to Login</string>
    <string name="logout">LOGOUT</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_authorized_personnel_only">Authorized Personnel Only</string>
    <string name="register">Register</string>
    <string name="help">Need help?</string>
    <string name="emergency">Emergency</string>
    <string name="phone_number" />
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="accessibility_service_description">Gesture detection service</string>

    <string name="faq1">
        The system automatically rings at 7:10 to remind students of the time 7:15 to indicate the start of the flag ceremony and listing of tardiness in the morning. It also offers remote triggering capabilities via the ResQ app for emergency situations like earthquakes and fires.
    </string>

    <string name="faq2">
        The ResQ app provides a secure platform, allowing verified users to remotely trigger the school bell in emergency situations such as earthquakes and fires, ensuring fast and effective response to critical events.
    </string>

    <string name="faq3">
        The ResQ app will not be available on Ios users due to incompatibility of the software systems. If you are an android please follow these steps ; Ensure correct app name search, confirm app availability in your region, and contact the app developer or administrator if needed.
    </string>

    <string name="faq4">
        Yes, the alarm may still be triggered manually; however, only manually trigger it when there are issues remotely. If there are none, please use the ResQ app to prevent damage to the system or the app.
    </string>

    <string name="faq5">
        Possible reasons could include issues with the internet connection, incorrect app usage, or device malfunction. Solutions involve ensuring correct app usage, stable internet connection, and device functionality.
    </string>

    <string name="faq6">
        To trigger the bell remotely, open the ResQ app on your mobile phone, and select the earthquake or fire icon to initiate the bell ringing sequence. For further instructions, please read the ResQ Manual.
    </string>

    <string name="faq7">
        Contact the assigned organization (MAIO) which the project has been passed on to for maintenance purposes and verify the device\'s internal clock settings, ensure correct programming for automated ringing time, and consider restarting the device if the issue persists. For further instructions, please read the ResQ Manual.
    </string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="FAQtext">Welcome to the ResQ FAQs! In this section, we provide answers to common questions regarding the ResQ system, designed to enhance safety and communication in school environments. From installation and operation to troubleshooting and support, these FAQs aim to address key inquiries about the ResQ app and its integration with the Automated School Bell System. Whether you\'re a user, administrator, or technical support personnel, this resource serves as a comprehensive guide to ensure smooth functionality and effective emergency response.</string>
    <string name="productintroduction">Welcome to the Automated School Bell System Step-by-Step Manual. This guide is designed to help you understand and utilize the features of our automated bell system effectively. It automates ringing at 7:10 and 7:15 in the morning and provides remote triggering capabilities via the ResQ app for emergency situations like earthquakes and fires.</string>
    <string name="faqintro">Welcome to the ResQ FAQs! In this section, we provide answers to common questions regarding the ResQ system, designed to enhance safety and communication in school environments. From installation and operation to troubleshooting and support, these FAQs aim to address key inquiries about the ResQ app and its integration with the Automated School Bell System. Whether you\'re a user, administrator, or technical support personnel, this resource serves as a comprehensive guide to ensure smooth functionality and effective emergency response.</string>
    <string name="select_time">Select Time</string>
</resources>